# opmanager-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PYPI_PUBLISHING.md  README.md  SECURITY.md  docker-compose.yml  generate_openapi.py  openapi.json  overview.json  pyproject.toml  requirements.txt  rest-api.html  start-server.sh  test-docker.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
opmanager_mcp/: __init__.py  api_client.py  config.py  exceptions.py  http_server.py  logging_config.py  main.py  server.py  tool_generator.py
tests/: __init__.py  conftest.py  test_api_client.py  test_config.py  test_http_server.py  test_server.py  test_tool_generator.py
